Fix: nav overflow
nav width is larger than other elements, spilling over

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,9 @@
 /* Global styles */
+/* Page width is different accross some elements and nav is pushing out farther than other elements, this is stopping that  */
+html {
+    /*  */
+    overflow-x: hidden;
+}
 
 body {
     font-family: Roboto, Arial;
@@ -12,6 +17,8 @@ body {
     max-width: 1800px;
     margin-left: auto;
     margin-right: auto;
+    /* Page width is different accross some elements and nav is pushing out farther than other elements, this is stopping that  */
+    overflow-x: hidden;
 }
 
 main {
@@ -30,7 +37,7 @@ img {
     border: red 1px solid;
 }
 
-.button{
+.button {
     width: 120px;
     margin-top: 5px;
     margin-bottom: 10px;
@@ -44,7 +51,7 @@ img {
 }
 
 .button:hover {
-    background-color:#ff3300;
+    background-color: #ff3300;
 }
 
 div .card:hover {
@@ -53,6 +60,7 @@ div .card:hover {
     box-shadow: 3px 3px 3px 3px rgba(29, 27, 27, 0.37); */
     transition: box-shadow 0.4s ease-in-out;
 }
+
 /* Navbar */
 nav {
     padding: 3px 0 3px 0 !important;
@@ -82,7 +90,6 @@ nav {
     padding: 0 5px 0 5px;
     border-radius: 5px;
     margin-bottom: 5px;
-    margin-right: 20px;
 }
 
 .cta {
@@ -148,9 +155,9 @@ div .card {
     background-color: #000084 !important;
 }
 
-    /* To be deleted to make code more reusable */
+/* To be deleted to make code more reusable */
 
-.styleButton {  
+.styleButton {
     text-underline-offset: none;
     /* width: 120px;
     margin-top: 5px;
@@ -162,6 +169,7 @@ div .card {
     font-weight: bold;
     border-radius: 5px; */
 }
+
 .packageButton {
     position: absolute;
     bottom: 0;
@@ -205,6 +213,7 @@ height: 50px; */
     background-color: #ff3300;
     border: 1px black solid;
 }
+
 /* This toggles form input errors on and off by making them visible or invisible */
 .inactiveError {
     visibility: hidden;
@@ -217,6 +226,7 @@ height: 50px; */
     bottom: 252.59px;
     width: 100%;
 }
+
 #success-page {
     text-align: center;
     position: absolute;
@@ -238,6 +248,7 @@ height: 50px; */
     width: 190px;
     padding-top: 4px;
 }
+
 /* Footer styles */
 
 #footer {
@@ -264,17 +275,20 @@ height: 50px; */
     #success-page {
         top: 37%;
     }
+
     .success-checkmark {
         font-size: 40px;
         padding-bottom: 0;
         color: lightgreen;
     }
+
     .success-home-btn {
         background-color: #c23311;
         height: 37px;
         width: 190px;
         padding-top: 0;
     }
+
     #success-main {
         position: absolute;
         top: 52px;
